src/assets/css/style.css
/* ... */
.section-heading.text-left h2:before, .section-heading.text-left h2:after {
  left: 0;
  -webkit-transform: translateX(0%);
  -ms-transform: translateX(0%);
  transform: translateX(0%);
}

/* ------------------- GENERAL: FixedActionButton ------------------ */

.fixed-action-btn {
  background: #EEC643;
  padding: 18px 20px;
  font-family: "Raleway", sans-serif;
  font-size: 10px;
  font-weight: 400;
  border: 0;
  letter-spacing: 3px;
  text-align: center;
  color: #000 !important;
  text-transform: uppercase;
  cursor: pointer;
  align-items: center;
  justify-content: center;
  margin: 0 20%;
}

.fixed-action-btn span {
  display: inline-block;
  padding-top: 5px;
}


.fixed-action-btn:hover {
  background: #000;
  color: #fff !important;
  border: 1px solid #000
}

.fixed-action-btn:focus {
  outline: none
}

.fixed-actions-bottom {
  position: fixed;
  bottom: 2%;
  left: 85%;
  z-index: 1030;
}

/* ------------------- ABOUT: Staff Section (Frames) ------------------ */

.staff-frame {
  -webkit-transition: .3s all ease;
  -o-transition: .3s all ease;
  transition: .3s all ease;
  background: #fff;
}

.staff-frame .heading {
  font-size: 20px;
  text-transform: uppercase;
}

.staff-frame .heading a {
  color: #000;
}

.staff-frame .staff-frame-body {
  padding: 30px;
}

.staff-frame .staff-frame-body .price {
  color: #5c7893;
  font-weight: 400;
}

.staff-frame>.thumbnail {
  overflow: hidden;
  position: relative;
}

.staff-frame>.thumbnail img {
  -webkit-transition: .3s all ease;
  -o-transition: .3s all ease;
  transition: .3s all ease;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.staff-frame:hover {
  -webkit-box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.05);
  box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.05);
}

.staff-frame:hover img {
  -webkit-transform: scale(1.05);
  -ms-transform: scale(1.05);
  transform: scale(1.05);
}

.container-iframe {
  background-color: #000;
}

.form-design .form-group {
  margin-bottom: 30px
}

.form-design .form-control {
  border: 1px solid #e5e6e9;
  border-radius: 0px;
  height: 48px;
  padding-left: 18px;
  font-size: 16px;
}

.form-design .form-design:focus {
  outline: 0;
  box-shadow: none
}

.form-design .form-design::placeholder {
  font-weight: 300;
  color: #999999
}

.form-design textarea {
  border-radius: 0px;
  height: 100% !important
}

.form-group Button {
  border-radius: 0px;
}

.boxed-btn {
  background: #fff;
  color: #131313;
  display: inline-block;
  padding: 18px 44px;
  font-family: "Raleway", sans-serif;
  font-size: 14px;
  font-weight: 400;
  border: 0;
  border: 1px solid #000;
  letter-spacing: 3px;
  text-align: center;
  color: #000 !important;
  text-transform: uppercase;
  cursor: pointer
}

.boxed-btn:hover {
  background: #000;
  color: #fff !important;
  border: 1px solid #000
}

.boxed-btn:focus {
  outline: none
}

.boxed-btn.large-width {
  width: 220px
}

.boxed-btn3 {
  background: #000;
  color: #fff;
  display: inline-block;
  padding: 18px 44px;
  font-family: "Raleway", sans-serif;
  font-size: 14px;
  font-weight: 400;
  border: 0;
  border: 1px solid #000;
  letter-spacing: 3px;
  text-align: center;
  color: #fff !important;
  text-transform: uppercase;
  -webkit-transition: .5s;
  -moz-transition: .5s;
  -o-transition: .5s;
  transition: .5s;
  cursor: pointer
}

.boxed-btn3:hover {
  background: #fff;
  color: #000 !important;
  border: 1px solid #000
}

.boxed-btn3:focus {
  outline: none
}

.boxed-btn3.large-width {
  width: 220px
}

.boxed-btn2 {
  background: transparent;
  color: #fff;
  display: inline-block;
  padding: 18px 24px;
  font-family: "Raleway", sans-serif;
  font-size: 14px;
  font-weight: 400;
  border: 0;
  border: 1px solid #fff;
  letter-spacing: 2px;
  text-transform: uppercase
}

.boxed-btn2:hover {
  background: #fff;
  color: #131313 !important
}

.boxed-btn2:focus {
  outline: none
}

.line-button {
  color: #919191;
  font-size: 16px;
  font-weight: 400;
  display: inline-block;
  position: relative;
  padding-right: 5px;
  padding-bottom: 2px
}

.line-button::before {
  position: absolute;
  content: "";
  background: #919191;
  width: 100%;
  height: 1px;
  bottom: 0;
  left: 0
}

.line-button:hover {
  color: #000
}

.line-button:hover::before {
  background: #000
}

.cancel_now {
  background: #696969;
  display: inline-block;
  font-size: 14px;
  color: #fff !important;
  border: 1px solid #000;
  text-transform: capitalize;
  padding: 12px 27px
}

.book_now {
  display: inline-block;
  font-size: 14px;
  color: #000;
  border: 1px solid #000;
  text-transform: capitalize;
  padding: 12px 27px
}

.price {
  display: inline-block;
  font-size: 18px;
  color: #000;
  text-transform: capitalize;
  padding: 8px 0px
}

.book_now:hover {
  background: #2c2c2c;
  color: #fff !important;
  text-decoration: none;
}

.cancel_now:hover {
  background: #2c2c2c;
  color: #fff !important;
  text-decoration: none;
}

.vehicle_item {
  margin-bottom: 50px
}

.vehicle_details {
  padding: 30px 0 20px 10px;
  box-shadow: 0px 10px 20px 0px rgba(221, 221, 221, 0.3)
}

@media (min-width: 768px) {
  .vehicle_details {
    padding: 60px 30px 35px 35px
  }
}

.vehicle_details p {
  margin-bottom: 30px
}

.vehicle_details a {
  color: #2c2c2c
}

.vehicle_details a:hover {
  color: #009DFF;
  text-decoration: none
}

.vehicle_details h2 {
  font-size: 18px;
  font-weight: 600;
  margin-bottom: 8px
}

@media (min-width: 768px) {
  .vehicle_details h2 {
    font-size: 24px;
    margin-bottom: 15px
  }
}

.vehicle-info-link li {
  float: left;
  font-size: 14px
}

.vehicle-info-link li a {
  color: #999999
}

.vehicle-info-link li i, .vehicle-info-link li span {
  font-size: 13px;
  margin-right: 5px
}

.vehicle-info-link li::after {
  content: "|";
  padding-left: 10px;
  padding-right: 10px
}

.vehicle-info-link li:last-child::after {
  display: none
}

.vehicle-info-link::after {
  content: "";
  display: block;
  clear: both;
  display: table
}
/* ... */

